crud sala pronto (:

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
           <%= link_to "Cursos", "/cursos" %>
           <%= link_to "Periodos", "/periodos" %>
           <%= link_to "Materias", "/materias" %>
+          <%= link_to "Salas", "/salas" %>
         </ul>
       </div>
     </div>
