Fixing typos Fixing links

--- a/app/views/materias/_form.html.erb
+++ b/app/views/materias/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.select  :instituto_id, @institutos.collect { |i| [i.nome, i.id]} %>
   </div>
   <div class="field">
-    <%= f.label :siga %>
+    <%= f.label :sigla %>
     <%= f.text_field :sigla %>
   </div>
   <div class="field">
